# Solara

./: LICENSE  README.md  architecture.txt  mnote architecture.docx  notes.txt
Kafka/: docker-compose.yml
backend-go/: SERVICE_ARCHITECTURE_GUIDE.md  go.mod  go.sum  main.go  notes.db  notes.txt
backend-go/cmd/: root.go
backend-go/database/: db.go
backend-go/internal/notes/: notes.go
backend-go/models/: models.go
backend-go/utils/: util.go
backend/mnote/mnote/: pom.xml
backend/mnote/mnote/src/main/resources/: application.properties  application.yaml
mmote_agentic/: README.md  mnote_local.db  pyproject.toml
mmote_agentic/src/mmote_agentic/: crew.py  main.py
mmote_agentic/src/mmote_agentic/config/: agents.yaml  tasks.yaml
mmote_agentic/src/mmote_agentic/tools/: storage.py
ollama/: ModelFile.txt  embedding.txt  ollama & llm notes.txt
quest-llm/: LM Studio 0-4-12 v1 endpoints.json  pom.xml
quest-llm/src/main/java/com/solara/quest_llm/: QuestLlmApplication.java
quest-llm/src/main/java/com/solara/quest_llm/config/: JacksonConfig.java  KafkaConsumerConfig.java  KafkaProducerConfig.java  LmStudioClientConfig.java  QuestLMConfig.java
quest-llm/src/main/java/com/solara/quest_llm/controllers/: DolphinController.java  LmStudioController.java  LmStudioOpenAIController.java
quest-llm/src/main/java/com/solara/quest_llm/models/: LmModelResponse.java
quest-llm/src/main/proto/: quest.proto
quest-llm/src/main/resources/: application.properties
quest-llm/src/test/java/com/solara/quest_llm/: QuestLlmApplicationTests.java
(+55 files in other folders)
