[project]
name = "mmote_agentic"
version = "0.1.0"
description = "mmote_agentic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "langchain-google-genai>=0.0.20"
]

[project.scripts]
mmote_agentic = "mmote_agentic.main:run"
run_crew = "mmote_agentic.main:run"
train = "mmote_agentic.main:train"
replay = "mmote_agentic.main:replay"
test = "mmote_agentic.main:test"
run_with_trigger = "mmote_agentic.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmote_agentic"]

[tool.crewai]
type = "crew"
